admission/ValidatingAdmissionPolicy/policies/anonymous-subjects/rolebindings/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: rolebinding-anonymous-subjects-namespace-optout-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 3216e8b4-598d-5d00-a9ad-a3493b74a5ba
  labels:
    check-rolebinding-anonymous-subjects.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/warn: enabled
    check-rolebinding-anonymous-subjects.security.kolteq.com/audit: 'false-true'
    check-rolebinding-anonymous-subjects.security.kolteq.com/enforce: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
spec:
  policyName: rolebinding-anonymous-subjects
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/warn
        operator: In
        values:
        - enabled
      - key: check-rolebinding-anonymous-subjects.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: rolebinding-anonymous-subjects-namespace-optin-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 3216e8b4-598d-5d00-a9ad-a3493b74a5ba
  labels:
    check-rolebinding-anonymous-subjects.security.kolteq.com/warn: 'false-true'
    check-rolebinding-anonymous-subjects.security.kolteq.com/audit: 'false-true'
    check-rolebinding-anonymous-subjects.security.kolteq.com/enforce: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: rolebinding-anonymous-subjects
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-rolebinding-anonymous-subjects.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: rolebinding-anonymous-subjects-namespace-optout-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 3216e8b4-598d-5d00-a9ad-a3493b74a5ba
  labels:
    check-rolebinding-anonymous-subjects.security.kolteq.com/audit: 'false-true'
    security.kolteq.com/audit: enabled
    check-rolebinding-anonymous-subjects.security.kolteq.com/enforce: 'false-true'
    check-rolebinding-anonymous-subjects.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: rolebinding-anonymous-subjects
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/audit
        operator: In
        values:
        - enabled
      - key: check-rolebinding-anonymous-subjects.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: rolebinding-anonymous-subjects-namespace-optin-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 3216e8b4-598d-5d00-a9ad-a3493b74a5ba
  labels:
    check-rolebinding-anonymous-subjects.security.kolteq.com/audit: 'false-true'
    check-rolebinding-anonymous-subjects.security.kolteq.com/enforce: 'false-true'
    check-rolebinding-anonymous-subjects.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: rolebinding-anonymous-subjects
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-rolebinding-anonymous-subjects.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: rolebinding-anonymous-subjects-namespace-optout-enforce
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 3216e8b4-598d-5d00-a9ad-a3493b74a5ba
  labels:
    check-rolebinding-anonymous-subjects.security.kolteq.com/enforce: 'false-true'
    security.kolteq.com/enforce: enabled
    check-rolebinding-anonymous-subjects.security.kolteq.com/audit: 'false-true'
    check-rolebinding-anonymous-subjects.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: rolebinding-anonymous-subjects
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/enforce
        operator: In
        values:
        - enabled
      - key: check-rolebinding-anonymous-subjects.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: rolebinding-anonymous-subjects-namespace-optin-enforce
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 3216e8b4-598d-5d00-a9ad-a3493b74a5ba
  labels:
    check-rolebinding-anonymous-subjects.security.kolteq.com/enforce: 'false-true'
    check-rolebinding-anonymous-subjects.security.kolteq.com/audit: 'false-true'
    check-rolebinding-anonymous-subjects.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: rolebinding-anonymous-subjects
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-rolebinding-anonymous-subjects.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
